--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "terser-webpack-plugin": "^1.4.3",
     "typescript": "^3.8.3",
     "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "minimist": ">=1.2.2"
   },
   "bugs": {
     "url": "https://github.com/tonix-tuft/jquery-multiselect-checkbox/issues"
